  - Fixes to ImageManager when deleting files in a dir below the uploads/images path
  - Fixes to cleaning of values in edit_user and add_user wrt email fields (now consistent)
  - Numerous SSL fixes
  - {uploads_url} tag now uses cms_config->smart_uploads_url() (new function)
  - fixes a minor issue with cleaning of the incoming page variable
  - Fixes an error with UDT's and syntax hilighters.

Core - Bug Reports:
  - #8238 Assets loaded as http instead of https when ssl is enabled for /admin area
  - #8315 Crash in Content Page Edit: exit / die without error message
  - #8386 Function redirect();
  - #8409 Content block does not appear in Pages if sitedown
  - #8419 E-mail address for user not accepted if having '-' character on it
  - #8563 Cannot add 'separator' if 'Page URL's are required'
  - #8564 Images cannot be deleted in Image Manager
  - #8571 NCleanGrey admin theme on 1.11.2.1
  - #8672 Dropzone don't remember the selected directory
  - #8684 Type MyIsam 
  - #8686 cms_date_format and cms_escape Smarty modifiers in templates no longer found by Smarty
  - #8695 Update routes and mod_rewrite

  
Version 1.11.3 - Darwin
-----------------------------
Core - General
  - Aliases in NLS operations are now case insensitive
  - Fixes problem with editing templates/content in sitedown mode
  - Fixes problems with separators when page urls are required
  - Fixes problem with delete image in image manager after security fix
  - Fixes to the smarty parsing for templates
  - Fixes to loading of UDT's.... now load UDT's for all requests
  - Fix displaying of page title in NCleanGrey admin theme
  - Fixes to preview and submit in editcontent with lots of content blocks (particularly content_image}
  - The cms_stylesheet plugin is no longer cachable by smarty
  - Recommend PHP 5.3.2 or greater
  - Smarty caching now disabled for PHP 5.2.x
  - Numerous fixes to FileManager and MicroTiny wrt. advanced mode
  - Removes wiki links from admin interface